2003-11-26 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): disabled a transformation I added in
	revision 1.188 (access to fields of a structure at an absolute address);
	it breaks with bitfields, extern declarations, and gcse analysis.
	* src/SDCCopt.c (isLocalWithoutDef): if ADDRESS_OF applied to a symbol, it
	could be assigned through a pointer, so don't complain.
	* src/SDCCast.c (astErrors),
	* src/SDCCast.h,
	* src/SDCCglue.c (emitRegularMap): fixed bug #847813

2003-11-26 Vangelis Rokas <vrokas@otenet.gr>
	
	* src/pic16/main.c (_pic16_genIVT): fixed interrupt vector table
	* src/pic16/main.c (_pic16_genAssemblerPreamble): re-enabled the
	output of __config directives, since gpasm now supports them
	* src/pic16/main.c (_pic16_finaliseOptions): define MCU
	pre-processor macro, i.e. -DMCU=p18f452
	* src/pic16/ralloc.c: renamed packRegisters to pic16_packRegisters,
	and modified to handle 'cast' icode similarly to '=' icode
	* src/pic16/device.h (typedef struct PIC_device): added field
	'extMIface' to indicate that chip has external memory interface
	* src/pic16/device.c: added chips 18F248, 18F258, 18F448, 18F458,
	18F6520, 18F6620, 18F6680, 18F6720, 18F8520, 18F8620, 18F8680,
	18F8720

2003-11-26 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCC.y (pointer): fixed bug #846006
	* support/Util/SDCCerr.c: made W_PTR_TYPE_INVALID message clearer
	* src/SDCCast.c (decorateType): fixed bug #846009
	* src/ds390/peeph.def,        
	* src/ds390/gen.c (genAnd, genOr),
	* src/mcs51/peeph.def,        
	* src/mcs51/gen.c (genAnd, genOr): fixed bug #846777

2003-11-25 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Fixed several common-sub-expression bugs (#772861, #768380, & #755323)
	* src/SDCCdflow.c
	* src/SDCCcse.c
	* src/SDCCcse.h
	* src/SDCCBBlock.h
	* src/SDCCBBlock.c

2003-11-23 Klaus Flittner <klaus_flittner@gmx.de>

	fixed bug #845089
	* src/SDCCbitv.h,
	* src/SDCCbitv.c: added function to free a bitvector